# xtea-flavors

./: LICENSE  avx.cpp  avx.h  base.h  main.cpp  meson.build  ocl.cpp  ocl.h  ref.cpp  ref.h  stl.cpp  stl.h
